[gd_scene load_steps=22 format=3 uid="uid://dx5jaq5nccohx"]

[ext_resource type="Script" path="res://DiceTrayData/DiceTray.gd" id="1_w2v6l"]
[ext_resource type="Script" path="res://DiceTrayData/RoomRectangleLine2D.gd" id="2_21tng"]
[ext_resource type="PackedScene" uid="uid://c1sbbpswt68eq" path="res://DiceTrayData/DiceScenes/D X Dim.tscn" id="3_kng4p"]
[ext_resource type="PackedScene" uid="uid://ua53ly3yv0sv" path="res://DiceTrayData/DiceScenes/D Y Dim.tscn" id="4_x4k34"]
[ext_resource type="PackedScene" uid="uid://dwlkevdio50dl" path="res://DiceTrayData/DiceScenes/die_door_pics.tscn" id="5_qjmgg"]
[ext_resource type="Script" path="res://DiceTrayData/Die.gd" id="6_14uwm"]
[ext_resource type="PackedScene" uid="uid://xh1dxg5lm7mp" path="res://DiceTrayData/DiceScenes/D Primary Add Num.tscn" id="7_na2sw"]
[ext_resource type="PackedScene" uid="uid://4jtmcfbcxwts" path="res://DiceTrayData/DiceScenes/D Secondary Add Num.tscn" id="8_qpv5r"]
[ext_resource type="PackedScene" uid="uid://b5m3t0qb8cysk" path="res://DiceTrayData/DiceScenes/die_lcr.tscn" id="9_c7swo"]
[ext_resource type="PackedScene" uid="uid://mnm1600ha20s" path="res://DiceTrayData/DiceScenes/die_locked.tscn" id="10_aeodo"]
[ext_resource type="PackedScene" uid="uid://crf5mdkv3587n" path="res://DiceTrayData/DiceScenes/die_numbered_primary.tscn" id="11_yvrk6"]
[ext_resource type="PackedScene" uid="uid://osco2cs718d7" path="res://DiceTrayData/DiceScenes/die_numbered_secondary.tscn" id="12_1abmh"]
[ext_resource type="PackedScene" uid="uid://bi35saefl3rd4" path="res://DiceTrayData/DiceScenes/die_d_3.tscn" id="13_vjmht"]

[sub_resource type="BoxMesh" id="BoxMesh_dtie3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u08sl"]
albedo_color = Color(0.223078, 0.279609, 0.916116, 1)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4piwt"]
friction = 0.3
bounce = 0.44

[sub_resource type="BoxShape3D" id="BoxShape3D_a2wnj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xr2f7"]
albedo_color = Color(0.188235, 0.188235, 0.498039, 1)
roughness = 0.81

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2bp57"]
friction = 0.32
rough = true
bounce = 0.12

[sub_resource type="Environment" id="Environment_ospvs"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_bmajt"]

[node name="world" type="Node3D"]

[node name="DiceTray" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_w2v6l")

[node name="DiceCanvas" type="CanvasLayer" parent="DiceTray"]
unique_name_in_owner = true
layer = 2
follow_viewport_enabled = true

[node name="D66ScoreBoard" type="Control" parent="DiceTray/DiceCanvas"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -730.0
grow_horizontal = 2
grow_vertical = 2

[node name="D66PrimaryPolygon2D" type="Polygon2D" parent="DiceTray/DiceCanvas/D66ScoreBoard"]
self_modulate = Color(0, 1, 1, 1)
position = Vector2(42, 25)
scale = Vector2(7, 7)
antialiased = true
polygon = PackedVector2Array(0, 0, 0, 10, 10, 10, 10, 0)

[node name="D66SecondaryPolygon2D" type="Polygon2D" parent="DiceTray/DiceCanvas/D66ScoreBoard"]
self_modulate = Color(0.992157, 0.607843, 0, 1)
position = Vector2(122, 25)
scale = Vector2(7, 7)
antialiased = true
polygon = PackedVector2Array(0, 0, 0, 10, 10, 10, 10, 0)

[node name="D66PrimaryLabel" type="Label" parent="DiceTray/DiceCanvas/D66ScoreBoard"]
self_modulate = Color(0.521998, 0.462102, 0.204873, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 15.0
offset_right = -412.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1

[node name="D66SecondaryLabel" type="Label" parent="DiceTray/DiceCanvas/D66ScoreBoard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 140.0
offset_top = 15.0
offset_right = -332.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1

[node name="TwoD6ScoreBoard" type="Control" parent="DiceTray/DiceCanvas"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -730.0
grow_horizontal = 2
grow_vertical = 2

[node name="TwoD6PrimaryPolygon2D2" type="Polygon2D" parent="DiceTray/DiceCanvas/TwoD6ScoreBoard"]
self_modulate = Color(0, 0.390029, 0.890217, 1)
position = Vector2(282, 25)
scale = Vector2(7, 7)
antialiased = true
polygon = PackedVector2Array(0, 0, 0, 10, 10, 10, 10, 0)

[node name="TwoD6SecondaryPolygon2D2" type="Polygon2D" parent="DiceTray/DiceCanvas/TwoD6ScoreBoard"]
self_modulate = Color(0.992157, 0.133333, 0, 1)
position = Vector2(362, 25)
scale = Vector2(7, 7)
antialiased = true
polygon = PackedVector2Array(0, 0, 0, 10, 10, 10, 10, 0)

[node name="PrimaryLabel" type="Label" parent="DiceTray/DiceCanvas/TwoD6ScoreBoard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 300.0
offset_top = 15.0
offset_right = -172.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1

[node name="SecondaryLabel" type="Label" parent="DiceTray/DiceCanvas/TwoD6ScoreBoard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 380.0
offset_top = 15.0
offset_right = -92.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1

[node name="CenterResultLabel" type="Label" parent="DiceTray/DiceCanvas"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 69.0
grow_horizontal = 2
theme_override_constants/line_spacing = -26
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="XResultLabel" type="Label" parent="DiceTray/DiceCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 74.0
offset_top = 700.0
offset_right = -322.0
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60

[node name="YResultLabel" type="Label" parent="DiceTray/DiceCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 645.0
offset_right = -434.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
horizontal_alignment = 2
vertical_alignment = 2

[node name="ExitNumberLabel" type="Label" parent="DiceTray/DiceCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 754.0
offset_right = -230.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
vertical_alignment = 2

[node name="RoomRectangleLine2D" type="Line2D" parent="DiceTray/DiceCanvas"]
position = Vector2(80, 492)
points = PackedVector2Array(0, 220, 220, 220, 220, 0, 0, 0)
closed = true
width = 5.0
script = ExtResource("2_21tng")

[node name="RoomSizeDice" type="Node3D" parent="DiceTray"]

[node name="DieDXDim" parent="DiceTray/RoomSizeDice" groups=["Dice", "RoomSizeDice"] instance=ExtResource("3_kng4p")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.8, 0.2)
collision_layer = 0
collision_mask = 7
mass = 10.0
gravity_scale = 2.0

[node name="DieDYDim" parent="DiceTray/RoomSizeDice" groups=["Dice", "RoomSizeDice"] instance=ExtResource("4_x4k34")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.8, 0.4)
collision_layer = 0
collision_mask = 7
mass = 10.0
gravity_scale = 2.0

[node name="DieDoorPics" parent="DiceTray/RoomSizeDice" groups=["Dice", "RoomSizeDice"] instance=ExtResource("5_qjmgg")]
unique_name_in_owner = true
transform = Transform3D(-1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, -0.3, 0.8, 0.6)
collision_layer = 0
collision_mask = 7
mass = 10.0
gravity_scale = 2.0
script = ExtResource("6_14uwm")

[node name="XYThrowButton" type="Button" parent="DiceTray/RoomSizeDice"]
light_mask = 8
visibility_layer = 8
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 94.0
offset_top = 513.0
offset_right = -318.0
offset_bottom = -187.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
flat = true

[node name="XYThrowButton2" type="Button" parent="DiceTray/RoomSizeDice"]
light_mask = 8
visibility_layer = 8
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = 724.0
offset_right = -377.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
flat = true

[node name="DoublesDice" type="Node3D" parent="DiceTray"]

[node name="DieDoublePrimary" parent="DiceTray/DoublesDice" groups=["Dice", "DoubleDice"] instance=ExtResource("7_na2sw")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0.2)
collision_layer = 0
collision_mask = 7
mass = 10.0
gravity_scale = 2.0

[node name="DieDoubleSecondary" parent="DiceTray/DoublesDice" groups=["Dice", "DoubleDice"] instance=ExtResource("8_qpv5r")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0.4)
collision_layer = 0
collision_mask = 7
mass = 10.0
gravity_scale = 2.0

[node name="DoubleThrowButton" type="Button" parent="DiceTray/DoublesDice"]
light_mask = 16
visibility_layer = 16
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 206.0
offset_top = 513.0
offset_right = -206.0
offset_bottom = -187.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
flat = true

[node name="RoomExitDirectionDie" type="Node3D" parent="DiceTray"]

[node name="DieLCR" parent="DiceTray/RoomExitDirectionDie" groups=["Dice"] instance=ExtResource("9_c7swo")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0.8, 0.6)
collision_layer = 0
collision_mask = 7
mass = 10.0
script = ExtResource("6_14uwm")

[node name="LCRThrowButton" type="Button" parent="DiceTray/RoomExitDirectionDie"]
visibility_layer = 32
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = 724.0
offset_right = -264.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
flat = true

[node name="ExitLockCheckDie" type="Node3D" parent="DiceTray"]

[node name="DieLocked" parent="DiceTray/ExitLockCheckDie" groups=["Dice"] instance=ExtResource("10_aeodo")]
unique_name_in_owner = true
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0.1, 0.8, 0.6)
collision_layer = 0
collision_mask = 7
mass = 10.0
gravity_scale = 2.0
script = ExtResource("6_14uwm")

[node name="ExitLockThrowButton" type="Button" parent="DiceTray/ExitLockCheckDie"]
visibility_layer = 64
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 263.0
offset_top = 724.0
offset_right = -148.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
flat = true

[node name="PrimaryDie" type="Node3D" parent="DiceTray"]

[node name="DiePrimaryNumbered" parent="DiceTray/PrimaryDie" groups=["Dice"] instance=ExtResource("11_yvrk6")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.8, 0.2)
collision_layer = 0
collision_mask = 7
mass = 10.0
gravity_scale = 2.0
script = ExtResource("6_14uwm")

[node name="PrimeThrowButton" type="Button" parent="DiceTray/PrimaryDie"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 318.0
offset_top = 513.0
offset_right = -94.0
offset_bottom = -293.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
flat = true

[node name="SecondaryDie" type="Node3D" parent="DiceTray"]

[node name="DieSecondaryNumbered" parent="DiceTray/SecondaryDie" groups=["Dice"] instance=ExtResource("12_1abmh")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.8, 0.4)
collision_layer = 0
collision_mask = 7
mass = 10.0
gravity_scale = 2.0
script = ExtResource("6_14uwm")

[node name="SecondaryThrowButton" type="Button" parent="DiceTray/SecondaryDie"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 318.0
offset_top = 613.0
offset_right = -94.0
offset_bottom = -193.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
flat = true

[node name="D3Die" type="Node3D" parent="DiceTray"]

[node name="DieD3" parent="DiceTray/D3Die" groups=["Dice"] instance=ExtResource("13_vjmht")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.8, 0.6)
collision_layer = 0
collision_mask = 7
mass = 10.0
gravity_scale = 2.0
freeze = true
script = ExtResource("6_14uwm")

[node name="D3ThrowButton" type="Button" parent="DiceTray/D3Die"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 377.0
offset_top = 724.0
offset_right = -35.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
flat = true

[node name="TrayModel" type="Node3D" parent="DiceTray"]

[node name="TableBackstop" type="MeshInstance3D" parent="DiceTray/TrayModel"]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 0.001, -0.00907886, 0.464872, -1.24492)
mesh = SubResource("BoxMesh_dtie3")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_u08sl")

[node name="StaticBody3D" type="StaticBody3D" parent="DiceTray/TrayModel/TableBackstop"]
collision_mask = 4
physics_material_override = SubResource("PhysicsMaterial_4piwt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DiceTray/TrayModel/TableBackstop/StaticBody3D"]
visible = false
shape = SubResource("BoxShape3D_a2wnj")

[node name="TableRight" type="MeshInstance3D" parent="DiceTray/TrayModel"]
transform = Transform3D(0.001, 0, 0, 0, 1, 0, 0, 0, 3, 0.473461, 0.496143, -0.0349791)
mesh = SubResource("BoxMesh_dtie3")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_u08sl")

[node name="StaticBody3D" type="StaticBody3D" parent="DiceTray/TrayModel/TableRight"]
collision_mask = 4
physics_material_override = SubResource("PhysicsMaterial_4piwt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DiceTray/TrayModel/TableRight/StaticBody3D"]
visible = false
shape = SubResource("BoxShape3D_a2wnj")

[node name="TableLeft" type="MeshInstance3D" parent="DiceTray/TrayModel"]
transform = Transform3D(0.001, 0, 0, 0, 1, 0, 0, 0, 3, -0.508575, 0.4, -0.0343166)
mesh = SubResource("BoxMesh_dtie3")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_u08sl")

[node name="StaticBody3D" type="StaticBody3D" parent="DiceTray/TrayModel/TableLeft"]
collision_layer = 4
collision_mask = 4
physics_material_override = SubResource("PhysicsMaterial_4piwt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DiceTray/TrayModel/TableLeft/StaticBody3D"]
visible = false
shape = SubResource("BoxShape3D_a2wnj")

[node name="TableFront" type="MeshInstance3D" parent="DiceTray/TrayModel"]
transform = Transform3D(2, 0, 0, 0, 0.698094, -0.187421, 0, 1.87421, 0.0698094, -0.00492978, 0.368759, 0.739153)
layers = 0
mesh = SubResource("BoxMesh_dtie3")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_xr2f7")

[node name="StaticBody3D" type="StaticBody3D" parent="DiceTray/TrayModel/TableFront"]
collision_mask = 4
physics_material_override = SubResource("PhysicsMaterial_4piwt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DiceTray/TrayModel/TableFront/StaticBody3D"]
shape = SubResource("BoxShape3D_a2wnj")

[node name="DiceTrayBottom" type="MeshInstance3D" parent="DiceTray/TrayModel"]
transform = Transform3D(20, 0, 0, 0, 0.01, 0, 0, 0, 10, 0, -0.005, 0)
mesh = SubResource("BoxMesh_dtie3")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_u08sl")

[node name="StaticBody3D" type="StaticBody3D" parent="DiceTray/TrayModel/DiceTrayBottom"]
collision_layer = 257
physics_material_override = SubResource("PhysicsMaterial_2bp57")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DiceTray/TrayModel/DiceTrayBottom/StaticBody3D"]
visible = false
shape = SubResource("BoxShape3D_a2wnj")

[node name="PickUpAllDiceButton" type="Button" parent="DiceTray"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -75.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Pick Up All Dice"

[node name="CamNLights" type="Node" parent="."]

[node name="Camera3D" type="Camera3D" parent="CamNLights"]
transform = Transform3D(1, 0, 0, 0, 0.42382, 0.905746, 0, -0.905746, 0.42382, 0, 5.06183, 1.9732)
environment = SubResource("Environment_ospvs")
attributes = SubResource("CameraAttributesPractical_bmajt")
fov = 20.0
near = 3.0
far = 50.0

[node name="SpotLight3D" type="SpotLight3D" parent="CamNLights"]
transform = Transform3D(1, 0, 0, 0, 0.414121, 0.910222, 0, -0.910222, 0.414121, 0.256, 5.71334, 2.61793)
light_energy = 1.896
spot_range = 29.425
spot_attenuation = 0.203064
spot_angle_attenuation = 0.176777

[node name="SpotLight3D2" type="SpotLight3D" parent="CamNLights"]
transform = Transform3D(-0.215252, 0.638348, -0.739039, 0.0301943, 0.760767, 0.648322, 0.976092, 0.117238, -0.183032, -3.32477, 3.50071, -0.72213)
light_energy = 0.232
spot_range = 9.917
spot_attenuation = 0.450625
spot_angle = 29.1231
spot_angle_attenuation = 0.25

[node name="OmniLight3D" type="OmniLight3D" parent="CamNLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.13718, 4.67024, -1.29338)

[connection signal="clear_room_rectangle" from="DiceTray" to="DiceTray/DiceCanvas/RoomRectangleLine2D" method="_on_dice_tray_clear_room_rectangle"]
[connection signal="resize_room_rectangle" from="DiceTray" to="DiceTray/DiceCanvas/RoomRectangleLine2D" method="resize_room_rectangle"]
[connection signal="input_event" from="DiceTray/RoomSizeDice/DieDXDim" to="DiceTray/RoomSizeDice/DieDXDim" method="_on_input_event"]
[connection signal="input_event" from="DiceTray/RoomSizeDice/DieDXDim" to="DiceTray/RoomSizeDice/DieDYDim" method="_on_input_event"]
[connection signal="input_event" from="DiceTray/RoomSizeDice/DieDXDim" to="DiceTray/RoomSizeDice/DieDoorPics" method="_on_input_event"]
[connection signal="roll_finished" from="DiceTray/RoomSizeDice/DieDXDim" to="DiceTray" method="_on_die_dx_dim_roll_finished"]
[connection signal="roll_started" from="DiceTray/RoomSizeDice/DieDXDim" to="DiceTray" method="_on_room_dimension_roll_started"]
[connection signal="input_event" from="DiceTray/RoomSizeDice/DieDYDim" to="DiceTray/RoomSizeDice/DieDXDim" method="_on_input_event"]
[connection signal="input_event" from="DiceTray/RoomSizeDice/DieDYDim" to="DiceTray/RoomSizeDice/DieDYDim" method="_on_input_event"]
[connection signal="input_event" from="DiceTray/RoomSizeDice/DieDYDim" to="DiceTray/RoomSizeDice/DieDoorPics" method="_on_input_event"]
[connection signal="roll_finished" from="DiceTray/RoomSizeDice/DieDYDim" to="DiceTray" method="_on_die_dy_dim_roll_finished"]
[connection signal="roll_started" from="DiceTray/RoomSizeDice/DieDYDim" to="DiceTray" method="_on_room_dimension_roll_started"]
[connection signal="input_event" from="DiceTray/RoomSizeDice/DieDoorPics" to="DiceTray/RoomSizeDice/DieDXDim" method="_on_input_event"]
[connection signal="input_event" from="DiceTray/RoomSizeDice/DieDoorPics" to="DiceTray/RoomSizeDice/DieDYDim" method="_on_input_event"]
[connection signal="input_event" from="DiceTray/RoomSizeDice/DieDoorPics" to="DiceTray/RoomSizeDice/DieDoorPics" method="_on_input_event"]
[connection signal="roll_finished" from="DiceTray/RoomSizeDice/DieDoorPics" to="DiceTray" method="_on_die_door_pics_roll_finished"]
[connection signal="roll_started" from="DiceTray/RoomSizeDice/DieDoorPics" to="DiceTray" method="_on_room_dimension_roll_started"]
[connection signal="sleeping_state_changed" from="DiceTray/RoomSizeDice/DieDoorPics" to="DiceTray/RoomSizeDice/DieDoorPics" method="_on_sleeping_state_changed"]
[connection signal="pressed" from="DiceTray/RoomSizeDice/XYThrowButton" to="DiceTray/RoomSizeDice/DieDXDim" method="_on_xy_throw_button_pressed"]
[connection signal="pressed" from="DiceTray/RoomSizeDice/XYThrowButton" to="DiceTray/RoomSizeDice/DieDYDim" method="_on_xy_throw_button_pressed"]
[connection signal="pressed" from="DiceTray/RoomSizeDice/XYThrowButton" to="DiceTray/RoomSizeDice/DieDoorPics" method="_on_xy_throw_button_pressed"]
[connection signal="pressed" from="DiceTray/RoomSizeDice/XYThrowButton2" to="DiceTray/RoomSizeDice/DieDXDim" method="_on_xy_throw_button_pressed"]
[connection signal="pressed" from="DiceTray/RoomSizeDice/XYThrowButton2" to="DiceTray/RoomSizeDice/DieDYDim" method="_on_xy_throw_button_pressed"]
[connection signal="pressed" from="DiceTray/RoomSizeDice/XYThrowButton2" to="DiceTray/RoomSizeDice/DieDoorPics" method="_on_xy_throw_button_pressed"]
[connection signal="input_event" from="DiceTray/DoublesDice/DieDoublePrimary" to="DiceTray/DoublesDice/DieDoublePrimary" method="_on_input_event"]
[connection signal="input_event" from="DiceTray/DoublesDice/DieDoublePrimary" to="DiceTray/DoublesDice/DieDoubleSecondary" method="_on_input_event"]
[connection signal="roll_finished" from="DiceTray/DoublesDice/DieDoublePrimary" to="DiceTray" method="_on_die_double_primary_roll_finished"]
[connection signal="roll_started" from="DiceTray/DoublesDice/DieDoublePrimary" to="DiceTray" method="_on_die_double_roll_started"]
[connection signal="input_event" from="DiceTray/DoublesDice/DieDoubleSecondary" to="DiceTray/DoublesDice/DieDoublePrimary" method="_on_input_event"]
[connection signal="input_event" from="DiceTray/DoublesDice/DieDoubleSecondary" to="DiceTray/DoublesDice/DieDoubleSecondary" method="_on_input_event"]
[connection signal="roll_finished" from="DiceTray/DoublesDice/DieDoubleSecondary" to="DiceTray" method="_on_die_double_secondary_roll_finished"]
[connection signal="roll_started" from="DiceTray/DoublesDice/DieDoubleSecondary" to="DiceTray" method="_on_die_double_roll_started"]
[connection signal="pressed" from="DiceTray/DoublesDice/DoubleThrowButton" to="DiceTray/DoublesDice/DieDoublePrimary" method="_on_double_throw_button_pressed"]
[connection signal="pressed" from="DiceTray/DoublesDice/DoubleThrowButton" to="DiceTray/DoublesDice/DieDoubleSecondary" method="_on_double_throw_button_pressed"]
[connection signal="input_event" from="DiceTray/RoomExitDirectionDie/DieLCR" to="DiceTray/RoomExitDirectionDie/DieLCR" method="_on_input_event"]
[connection signal="roll_finished" from="DiceTray/RoomExitDirectionDie/DieLCR" to="DiceTray" method="_on_die_lcr_roll_finished"]
[connection signal="roll_started" from="DiceTray/RoomExitDirectionDie/DieLCR" to="DiceTray" method="_on_die_lcr_roll_started"]
[connection signal="sleeping_state_changed" from="DiceTray/RoomExitDirectionDie/DieLCR" to="DiceTray/RoomExitDirectionDie/DieLCR" method="_on_sleeping_state_changed"]
[connection signal="pressed" from="DiceTray/RoomExitDirectionDie/LCRThrowButton" to="DiceTray/RoomExitDirectionDie/DieLCR" method="_on_lcr_throw_button_pressed"]
[connection signal="input_event" from="DiceTray/ExitLockCheckDie/DieLocked" to="DiceTray/ExitLockCheckDie/DieLocked" method="_on_input_event"]
[connection signal="roll_finished" from="DiceTray/ExitLockCheckDie/DieLocked" to="DiceTray" method="_on_die_locked_roll_finished"]
[connection signal="roll_started" from="DiceTray/ExitLockCheckDie/DieLocked" to="DiceTray" method="_on_die_locked_roll_started"]
[connection signal="sleeping_state_changed" from="DiceTray/ExitLockCheckDie/DieLocked" to="DiceTray/ExitLockCheckDie/DieLocked" method="_on_sleeping_state_changed"]
[connection signal="pressed" from="DiceTray/ExitLockCheckDie/ExitLockThrowButton" to="DiceTray/ExitLockCheckDie/DieLocked" method="_on_exit_lock_throw_button_pressed"]
[connection signal="input_event" from="DiceTray/PrimaryDie/DiePrimaryNumbered" to="DiceTray/PrimaryDie/DiePrimaryNumbered" method="_on_input_event"]
[connection signal="roll_finished" from="DiceTray/PrimaryDie/DiePrimaryNumbered" to="DiceTray" method="_on_die_primary_numbered_roll_finished"]
[connection signal="roll_started" from="DiceTray/PrimaryDie/DiePrimaryNumbered" to="DiceTray" method="_on_die_primary_numbered_roll_started"]
[connection signal="sleeping_state_changed" from="DiceTray/PrimaryDie/DiePrimaryNumbered" to="DiceTray/PrimaryDie/DiePrimaryNumbered" method="_on_sleeping_state_changed"]
[connection signal="pressed" from="DiceTray/PrimaryDie/PrimeThrowButton" to="DiceTray/PrimaryDie/DiePrimaryNumbered" method="_on_prime_throw_button_pressed"]
[connection signal="input_event" from="DiceTray/SecondaryDie/DieSecondaryNumbered" to="DiceTray/SecondaryDie/DieSecondaryNumbered" method="_on_input_event"]
[connection signal="roll_finished" from="DiceTray/SecondaryDie/DieSecondaryNumbered" to="DiceTray" method="_on_die_secondary_numbered_roll_finished"]
[connection signal="roll_started" from="DiceTray/SecondaryDie/DieSecondaryNumbered" to="DiceTray" method="_on_die_secondary_numbered_roll_started"]
[connection signal="sleeping_state_changed" from="DiceTray/SecondaryDie/DieSecondaryNumbered" to="DiceTray/SecondaryDie/DieSecondaryNumbered" method="_on_sleeping_state_changed"]
[connection signal="pressed" from="DiceTray/SecondaryDie/SecondaryThrowButton" to="DiceTray/SecondaryDie/DieSecondaryNumbered" method="_on_secondary_throw_button_pressed"]
[connection signal="input_event" from="DiceTray/D3Die/DieD3" to="DiceTray/D3Die/DieD3" method="_on_input_event"]
[connection signal="roll_finished" from="DiceTray/D3Die/DieD3" to="DiceTray" method="_on_die_d_3_roll_finished"]
[connection signal="roll_started" from="DiceTray/D3Die/DieD3" to="DiceTray" method="_on_die_d_3_roll_started"]
[connection signal="sleeping_state_changed" from="DiceTray/D3Die/DieD3" to="DiceTray/D3Die/DieD3" method="_on_sleeping_state_changed"]
[connection signal="pressed" from="DiceTray/D3Die/D3ThrowButton" to="DiceTray/D3Die/DieD3" method="_on_d_3_throw_button_pressed"]
[connection signal="pressed" from="DiceTray/PickUpAllDiceButton" to="DiceTray/RoomSizeDice/DieDXDim" method="_on_pick_up_all_dice_button_pressed"]
[connection signal="pressed" from="DiceTray/PickUpAllDiceButton" to="DiceTray/RoomSizeDice/DieDYDim" method="_on_pick_up_all_dice_button_pressed"]
[connection signal="pressed" from="DiceTray/PickUpAllDiceButton" to="DiceTray/RoomSizeDice/DieDoorPics" method="_on_pick_up_all_dice_button_pressed"]
[connection signal="pressed" from="DiceTray/PickUpAllDiceButton" to="DiceTray/DoublesDice/DieDoublePrimary" method="_on_pick_up_all_dice_button_pressed"]
[connection signal="pressed" from="DiceTray/PickUpAllDiceButton" to="DiceTray/DoublesDice/DieDoubleSecondary" method="_on_pick_up_all_dice_button_pressed"]
[connection signal="pressed" from="DiceTray/PickUpAllDiceButton" to="DiceTray/RoomExitDirectionDie/DieLCR" method="_on_pick_up_all_dice_button_pressed"]
[connection signal="pressed" from="DiceTray/PickUpAllDiceButton" to="DiceTray/ExitLockCheckDie/DieLocked" method="_on_pick_up_all_dice_button_pressed"]
[connection signal="pressed" from="DiceTray/PickUpAllDiceButton" to="DiceTray/PrimaryDie/DiePrimaryNumbered" method="_on_pick_up_all_dice_button_pressed"]
[connection signal="pressed" from="DiceTray/PickUpAllDiceButton" to="DiceTray/SecondaryDie/DieSecondaryNumbered" method="_on_pick_up_all_dice_button_pressed"]
[connection signal="pressed" from="DiceTray/PickUpAllDiceButton" to="DiceTray/D3Die/DieD3" method="_on_pick_up_all_dice_button_pressed"]
